# cpp-pt-4

./: .gitignore  CMakeLists.txt  Meeting-notes.md  README.md  formatStyleReadme.md
libs/: stb_image_write.h
scenes/: box.txt  cornell_box.txt  s.txt  test_scene.txt
src/: box.cpp  box.hpp  camera.cpp  camera.hpp  fileread.cpp  fileread.hpp  hittable.cpp  hittable.hpp  hittable_list.cpp  hittable_list.hpp  interval.cpp  interval.hpp  main.cpp  material.cpp  material.hpp  moving_sphere.cpp  moving_sphere.hpp  ray.cpp  ray.hpp  rect.cpp  rect.hpp  render.cpp  render.hpp  sphere.cpp  sphere.hpp  utility.cpp  utility.hpp  vec3.cpp  vec3.hpp
tests/: CMakeLists.txt  camera_tests.cpp  material_tests.cpp  ray_tests.cpp  utility_tests.cpp  vec3_tests.cpp
